# MRDesktop

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README_ANDROID.md  TEST_USAGE.md  build.bat  build_android.bat  build_android.sh  build_android_simple.bat  configure.bat  run.bat  run_client.bat  run_compression_test.bat  run_compression_test.sh  run_console_client.bat  run_console_client_debug.bat  run_server.bat  run_simple_test.bat  setup_android.bat  start_questci_simple.bat  test_questci_android.bat  vcpkg.json
.claude/: settings.local.json
.github/workflows/: compression-test.yml
android/: .gitignore  CMakeLists.txt  build_android.bat  gradle.properties  gradlew.bat  install_and_launch.bat  install_build_tools.bat  settings.gradle  setup_android_env.bat
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidVideoDecoder.cpp  AndroidVideoDecoder.h  CMakeLists.txt  VideoDecoder_Android.cpp  android_client.cpp  frame_receiver.cpp  input_sender.cpp  native_client.cpp  simple_android_client.cpp
android/app/src/main/java/com/mrdesktop/: MRDesktopClient.java  SimpleClient.java  TestApp.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
cmake/: FindAndroidNDK.cmake
scripts/: README.md  fetch_android_toolchain.bat  run_test.bat  run_test.ps1  test_compile.bat  verify_test_setup.bat
src/: main.cpp
src/UnrealClient/: .gitignore  UnrealClient.uproject
src/UnrealClient/Config/: DefaultEngine.ini  DefaultGame.ini
src/UnrealClient/Content/Maps/: MRTemplate.umap
src/UnrealClient/Content/Materials/: MRDesktopMat.uasset
src/UnrealClient/Saved/Config/WorldState/: 4244983870.json
src/UnrealClient/Source/: UnrealClient.Target.cs  UnrealClientEditor.Target.cs
src/UnrealClient/Source/UnrealClient/: MRClient.cpp  MRClient.h  UnrealClient.Build.cs  UnrealClient.cpp
src/client/: main.cpp
src/clients/android/: README.md  build.gradle  build_apk.bat
src/clients/android/app/src/main/cpp/: CMakeLists.txt  frame_receiver.h  input_sender.h  native_client.cpp  protocol.h
src/clients/android/app/src/main/java/com/mrdesktop/client/: MainActivity.java
src/clients/android/app/src/main/res/layout/: activity_main.xml
src/clients/android/app/src/main/res/values/: strings.xml
src/clients/android/app/src/main/res/xml/: backup_rules.xml
src/clients/console/: main.cpp
src/clients/unreal/: .gitignore  PTSamples.uproject
src/clients/unreal/Config/: DefaultEngine.ini
src/clients/unreal/Content/Materials/: MRDesktopMat.uasset
src/clients/unreal/Content/Passthrough/Blueprints/Core/: SplashScreenManager.uasset
src/clients/unreal/Content/Passthrough/Maps/: PTBackground.umap  PTStartup.umap
src/clients/unreal/Saved/Config/WorldState/: 3682189115.json
src/clients/unreal/Source/: PTSamples.Target.cs  PTSamplesEditor.Target.cs
src/clients/unreal/Source/PTSamples/: MRClient.cpp  MRClient.h  MRClientActor.cpp  MRClientActor.h  PTSamples.Build.cs  PTSamples.cpp
src/clients/windows/: CMakeLists.txt
src/clients/windows/include/: InputHandler.h  NetworkClient.h  Protocol.h  SimpleVideoRenderer.h  VideoRenderer.h  WindowManager.h
src/clients/windows/src/: InputHandler.cpp  NetworkClient.cpp  SimpleVideoRenderer.cpp  VideoRenderer.cpp  WindowManager.cpp  main.cpp
src/openxr/: main.cpp
src/server/: main.cpp
src/shared/: AV1Decoder.cpp  AV1Decoder.h  AV1Encoder.cpp  AV1Encoder.h  FrameLogger.cpp  FrameLogger.h  FrameReceiver.cpp  FrameReceiver.h  FrameUtils.h  H264Encoder.cpp  H264Encoder.h  H265Decoder.cpp  H265Decoder.h  H265Encoder.cpp  H265Encoder.h  NetworkReceiver.cpp  NetworkReceiver.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  protocol.h
tools/: README.md  build_apk_standalone.bat  download_android_tools.bat
windowsClient/: CMakeLists.txt
windowsClient/include/: NetworkClient.h  Protocol.h  SimpleVideoRenderer.h  VideoRenderer.h  WindowManager.h
windowsClient/src/: NetworkClient.cpp  SimpleVideoRenderer.cpp  VideoRenderer.cpp  WindowManager.cpp  main.cpp
